trade-service/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trade-app
  labels:
    kubernetes.io/metadata.name: trade-app
