trade-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trade-service
  namespace: trade-app
  labels:
    app: trade-service
    version: v1.0.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trade-service
  template:
    metadata:
      labels:
        app: trade-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: trade-service-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: trade-service
          image: <ACCOUNT>.dkr.ecr.ap-south-1.amazonaws.com/trade-service:v1.0
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: trade-service
  namespace: trade-app
  labels:
    app: trade-service
spec:
  selector:
    app: trade-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
